--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:css": "postcss src/styles/index.css -o src/index.css",
     "watch:css": "postcss src/styles/index.css -o src/index.css -w",
     "start": "npm run watch:css & react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,6 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "http://estacionckweb.github.io/plataforma-audiovisual",
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -32,6 +34,7 @@
   ],
   "devDependencies": {
     "autoprefixer": "^9.3.1",
+    "gh-pages": "^2.0.1",
     "postcss-cli": "^6.0.1",
     "tailwindcss": "^0.7.2"
   }
